2002-11-20  John Levon  <levon@movementarian.org>

	* ui/QDelimiterDialog.ui: geometry fix
 
2002-11-20  John Levon  <levon@movementarian.org>

	* Toolbar_pimpl.C:
	* QDelimiterDialog.C:
	* QMathDialog.C: use find_xpm to mangle name
 
2002-11-20  John Levon  <levon@movementarian.org>

	* QDelimiterDialog.h:
	* QDelimiterDialog.C: fix delimiter connect()
 
2002-11-20  John Levon  <levon@movementarian.org>

	* QDocument.C:
	* QDocumentDialog.C: fix my sillies
 
2002-11-20  John Levon  <levon@movementarian.org>

	* QLPainter.C: use realColor not color for the font
 
2002-11-18  John Levon  <levon@movementarian.org>

	* ui/Makefile.am:
	* moc/Makefile.am:
	* ui/moc/Makefile.am:
	* Makefile.am: define no translation

	* QDocument.C: avoid QBloatList
 
2002-11-17  John Levon  <levon@movementarian.org>

	* ui/QPrefScreenFontsModule.ui:
	* QPrefsDialog.h:
	* QPrefsDialog.C:
	* QPrefs.C: use font families properly

	* qfont_loader.C: and obey them
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QPrefsDialog.C: partial fonts fix
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QPrefsDialog.h:
	* QPrefsDialog.C: implement browse slots. Also
	  try to do something with fonts for Qt 3 (untested)
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QGraphics.C: some fixes from Herbert & me
 
2002-11-15  Juergen Spitzmueller  <j.spitzmueller@gmx.de>
 
 	* FileDialog.C: fix empty mask string
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QLImage.C: implement monochrome, and fake grayscale
 
2002-11-17  John Levon  <levon@movementarian.org>

	* qfont_loader.h:
	* qfont_loader.C: fix totally broken update code
 
2002-11-17  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* qcoloritem.h:
	* qcoloritem.C:
	* ui/QPrefColorsModule.ui:
	* QPrefs.C:
	* QPrefsDialog.h:
	* QPrefsDialog.C: implement colors. We're done !
 
2002-11-17  John Levon  <levon@movementarian.org>

	* FileDialog.C:  split into open/save so open
	  no longer says "Save" !
 