@@ -14,19 +14,23 @@
 #pragma implementation
 #endif
 
+#include "support/lstrings.h"
 #include "MenuBackend.h"
 #include "lyxfunc.h"
+#include "kbmap.h"
 #include "debug.h"
-
+ 
 #include "QtView.h"
 
 #include "QLPopupMenu.h"
 
-#include "support/lstrings.h"
-
+#include <boost/scoped_ptr.hpp>
+ 
 using std::pair;
 using std::make_pair;
-
+ 
+extern boost::scoped_ptr<kb_keymap> toplevel_keymap;
+ 
 namespace {
 
 string const getLabel(MenuItem const & mi)
@@ -41,6 +45,21 @@ string const getLabel(MenuItem const & mi)
 	if (pos == string::npos)
 		return label;
 	label.insert(pos, "&");
+ 
+	if (mi.kind() == MenuItem::Command) {
+		// FIXME: backend should do this
+		string const accel(toplevel_keymap->findbinding(mi.action()));
+		
+		if (!accel.empty()) {
+			label += "\t" + accel.substr(1, accel.find(']') - 1);
+		}
+		
+		lyxerr[Debug::GUI] << "Label: " << mi.label()
+				   << " Shortcut: " << mi.shortcut()
+				   << " Accel: " << accel << endl;
+	} else
+		lyxerr[Debug::GUI] << "Label: " << mi.label()
+				   << " Shortcut: " << mi.shortcut() << endl;
 
 	return label;
 }
